# brainless/models/label.py
@@ -5,14 +5,6 @@ Label module containing the label class and related label methods
 from datetime import datetime
 from marshmallow_sqlalchemy import SQLAlchemyAutoSchema
 from configuration import db
-from sqlalchemy import Table, Text
-
-# task and labels association table
-task_labels = Table('task_labels',
-                    db.metadata, 
-                    Column('task_id', ForeignKey('task.task_id'), primary_key=True), 
-                    Column('label_id', ForeignKey('label.label_id'), primary_key=True))
-
 
 class Label(db.Model):
     """ Label class """
@@ -20,17 +12,16 @@ class Label(db.Model):
 
     label_id = db.Column(db.Integer, primary_key=True)
     title = db.Column(db.String(32), nullable=False)
+    guid = db.Column(db.String(32), nullable=False)
+    account_id = db.Column(db.Integer)
     created_timestamp = db.Column(db.DateTime, default=datetime.utcnow)
     edited_timestamp = db.Column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)
 
-    labels = db.relationship('Label', secondary='task_labels', back_populates='label')
-
-    def __init__(self, title, project_id, due_datetime, priority):
-        self.task_id = None
+    def __init__(self, title, guid, account_id):
+        self.label_id = None
         self.title = title
-        self.project_id = project_id
-        self.due_datetime = due_datetime
-        self.priority = priority
+        self.guid = guid
+        self.account_id = account_id
         self.__created_timestamp = datetime.utcnow
         self.__edited_timestamp = datetime.utcnow
 
