# brainless/swagger/swagger.yaml
@@ -437,3 +437,577 @@ paths:
           schema:
             type: integer
       x-swagger-router-controller: "controllers"
+###############################################################################################################################
+###############################################################################################################################
+###############################################            PROJECTS             ###############################################
+###############################################################################################################################
+###############################################################################################################################
+  /users/{user_id}/accounts/{account_id}/projects/{project_id}:
+    get:
+      operationId: "projects.read"
+      tags:
+        - "Projects"
+      summary: "API operation for project retrieval"
+      description: "Retrieves one project related to a third party account with the provided ID"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the account"
+          required: True
+          type: integer
+        - name: "project_id"
+          in: path
+          description: "ID of the project"
+          required: True
+          type: integer
+      responses:
+        200:
+          description: "Sucessfully retrieved project information"
+          schema:
+            type: array
+            items:
+              properties:
+                account_id:
+                  type: integer
+                name:
+                  type: string
+                guid:
+                  type: string
+      x-swagger-router-controller: "controllers"
+    put:
+      operationId: "projects.update"
+      tags:
+         - "Projects"
+      summary: "API operation for project update"
+      description: "Updates one project realted to a third party account with the provided information payload"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the account"
+          required: True
+          type: integer
+        - name: "project_id"
+          in: path
+          description: "ID of the project"
+          required: True
+          type: integer
+        - name: "project"
+          in: body
+          description: "Project to update"
+          required: True
+          schema:
+            type: object
+            properties:
+              account_id:
+                type: integer
+              name:
+                type: string
+              guid:
+                type: string
+      responses:
+        201:
+          description: "Successfully updated the project"
+      x-swagger-router-controller: "controllers"
+    delete:
+      operationId: "projects.delete"
+      tags:
+         - "Projects"
+      summary: "API operation for project deletion"
+      description: "Deletes one project related to a third party account with the provided information payload"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the account"
+          required: True
+          type: integer
+        - name: "project_id"
+          in: path
+          description: "ID of the project"
+          required: True
+          type: integer
+      responses:
+        200:
+          description: "Successfully deleted the project"
+      x-swagger-router-controller: "controllers"
+  /users/{user_id}/accounts/{account_id}/projects:
+    get:
+      operationId: "projects.search"
+      tags:
+        - "Projects"
+      summary: "API operation for project retrieval"
+      description: "Retrieves one or several projects related to third party accounts with the provided information payload"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the account"
+          required: True
+          type: integer
+      responses:
+        200:
+          description: "Sucessfully retrieved project information"
+          schema:
+            type: array
+            items:
+              properties:
+                account_id:
+                  type: integer
+                name:
+                  type: string
+                guid:
+                  type: string
+      x-swagger-router-controller: "controllers"
+    post:
+      operationId: "projects.create"
+      tags:
+         - "Projects"
+      summary: "API operation for project creation"
+      description: "Creates one project with the provided information payload"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the project's account"
+          required: True
+          type: integer
+        - name: "project"
+          in: body
+          description: "Project to create"
+          required: True
+          schema:
+            type: object
+            properties:
+              account_id:
+                type: integer
+              name:
+                type: string
+              guid:
+                type: string
+      responses:
+        201:
+          description: "Successfully created the project"
+          schema:
+            type: integer
+      x-swagger-router-controller: "controllers"
+###############################################################################################################################
+###############################################################################################################################
+#################################################            TASKS             ################################################
+###############################################################################################################################
+###############################################################################################################################
+  /users/{user_id}/accounts/{account_id}/projects/{project_id}/tasks/{task_id}:
+    get:
+      operationId: "tasks.read"
+      tags:
+        - "Tasks"
+      summary: "API operation for task retrieval"
+      description: "Retrieves one task with the provided ID"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the account"
+          required: True
+          type: integer
+        - name: "project_id"
+          in: path
+          description: "ID of the project"
+          required: True
+          type: integer
+        - name: "task_id"
+          in: path
+          description: "ID of the task"
+          required: True
+          type: integer
+      responses:
+        200:
+          description: "Sucessfully retrieved task information"
+          schema:
+            type: array
+            items:
+              properties:
+                task_id:
+                  type: integer
+                title:
+                  type: string
+                project_id:
+                  type: integer
+                due_datetime:
+                  type: string
+                priority:
+                  type: integer
+                guid:
+                  type: string
+      x-swagger-router-controller: "controllers"
+    put:
+      operationId: "tasks.update"
+      tags:
+         - "Tasks"
+      summary: "API operation for task update"
+      description: "Updates one task with the provided information payload"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the account"
+          required: True
+          type: integer
+        - name: "project_id"
+          in: path
+          description: "ID of the project"
+          required: True
+          type: integer
+        - name: "task_id"
+          in: path
+          description: "ID of the task"
+          required: True
+          type: integer
+        - name: "task"
+          in: body
+          description: "Task to update"
+          required: True
+          schema:
+            type: object
+            properties:
+              task_id:
+                type: integer
+              title:
+                type: string
+              project_id:
+                type: integer
+              due_datetime:
+                type: string
+              priority:
+                type: integer
+              guid:
+                type: string
+      responses:
+        201:
+          description: "Successfully updated the task"
+      x-swagger-router-controller: "controllers"
+    delete:
+      operationId: "tasks.delete"
+      tags:
+         - "Tasks"
+      summary: "API operation for task deletion"
+      description: "Deletes one task with the provided information payload"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the account"
+          required: True
+          type: integer
+        - name: "project_id"
+          in: path
+          description: "ID of the project"
+          required: True
+          type: integer
+        - name: "task_id"
+          in: path
+          description: "ID of the task"
+          required: True
+          type: integer
+      responses:
+        200:
+          description: "Successfully deleted the task"
+      x-swagger-router-controller: "controllers"
+  /users/{user_id}/accounts/{account_id}/projects/{project_id}/tasks:
+    get:
+      operationId: "tasks.search"
+      tags:
+        - "Tasks"
+      summary: "API operation for task retrieval"
+      description: "Retrieves one or several tasks with the provided information payload"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the account"
+          required: True
+          type: integer
+        - name: "project_id"
+          in: path
+          description: "ID of the project"
+          required: True
+          type: integer
+      responses:
+        200:
+          description: "Sucessfully retrieved task information"
+          schema:
+            type: array
+            items:
+              properties:
+                task_id:
+                  type: integer
+                title:
+                  type: string
+                project_id:
+                  type: integer
+                due_datetime:
+                  type: string
+                priority:
+                  type: integer
+                guid:
+                  type: string
+      x-swagger-router-controller: "controllers"
+    post:
+      operationId: "tasks.create"
+      tags:
+         - "Tasks"
+      summary: "API operation for task creation"
+      description: "Creates one task with the provided information payload"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the project's account"
+          required: True
+          type: integer
+        - name: "project_id"
+          in: path
+          description: "ID of the project"
+          required: True
+          type: integer
+        - name: "task"
+          in: body
+          description: "Event to create"
+          required: True
+          schema:
+            type: object
+            properties:
+              title:
+                type: string
+              project_id:
+                type: integer
+              due_datetime:
+                type: string
+              priority:
+                type: integer
+              guid:
+                type: string
+      responses:
+        201:
+          description: "Successfully created the task"
+          schema:
+            type: integer
+      x-swagger-router-controller: "controllers"
+###############################################################################################################################
+###############################################################################################################################
+#################################################            Labels             ###############################################
+###############################################################################################################################
+###############################################################################################################################
+  /users/{user_id}/accounts/{account_id}/labels/{label_id}:
+    get:
+      operationId: "labels.read"
+      tags:
+        - "Labels"
+      summary: "API operation for label retrieval"
+      description: "Retrieves one label with the provided ID"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the account"
+          required: True
+          type: integer
+        - name: "label_id"
+          in: path
+          description: "ID of the label"
+          required: True
+          type: integer
+      responses:
+        200:
+          description: "Sucessfully retrieved label information"
+          schema:
+            type: array
+            items:
+              properties:
+                labek_id:
+                  type: integer
+                title:
+                  type: string
+                guid:
+                  type: string
+      x-swagger-router-controller: "controllers"
+    put:
+      operationId: "labels.update"
+      tags:
+         - "Labels"
+      summary: "API operation for label update"
+      description: "Updates one label with the provided information payload"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the account"
+          required: True
+          type: integer
+        - name: "label_id"
+          in: path
+          description: "ID of the label"
+          required: True
+          type: integer
+        - name: "label"
+          in: body
+          description: "Label to update"
+          required: True
+          schema:
+            type: object
+            properties:
+              label_id:
+                type: integer
+              title:
+                type: string
+              guid:
+                type: string
+              account_id:
+                type: integer
+      responses:
+        201:
+          description: "Successfully updated the label"
+      x-swagger-router-controller: "controllers"
+    delete:
+      operationId: "labels.delete"
+      tags:
+         - "Labels"
+      summary: "API operation for label deletion"
+      description: "Deletes one label with the provided information payload"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the account"
+          required: True
+          type: integer
+        - name: "label_id"
+          in: path
+          description: "ID of the label"
+          required: True
+          type: integer
+      responses:
+        200:
+          description: "Successfully deleted the label"
+      x-swagger-router-controller: "controllers"
+  /users/{user_id}/accounts/{account_id}/labels:
+    get:
+      operationId: "labels.search"
+      tags:
+        - "Labels"
+      summary: "API operation for label retrieval"
+      description: "Retrieves one or several labels with the provided information payload"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the account"
+          required: True
+          type: integer
+      responses:
+        200:
+          description: "Sucessfully retrieved label information"
+          schema:
+            type: array
+            items:
+              properties:
+                label_id:
+                  type: integer
+                title:
+                  type: string
+                guid:
+                  type: string
+      x-swagger-router-controller: "controllers"
+    post:
+      operationId: "labels.create"
+      tags:
+         - "Labels"
+      summary: "API operation for label creation"
+      description: "Creates one label with the provided information payload"
+      parameters:
+        - name: "user_id"
+          in: path
+          description: "ID of the account owner"
+          required: True
+          type: integer
+        - name: "account_id"
+          in: path
+          description: "ID of the project's account"
+          required: True
+          type: integer
+        - name: "label"
+          in: body
+          description: "Label to create"
+          required: True
+          schema:
+            type: object
+            properties:
+              title:
+                type: string
+              guid:
+                type: string
+              account_id:
+                type: integer
+      responses:
+        201:
+          description: "Successfully created the label"
+          schema:
+            type: integer
+      x-swagger-router-controller: "controllers"
